[package]
name = "solana-swap-smartcontract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
solana-program = "1.18.0"
spl-token = "4.0.0"
spl-associated-token-account = "2.3.0"

[features]
default = []
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]

[profile.release]
overflow-checks = true